--- a/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game_detail.xml
@@ -4,15 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="parent"
-    android:layout_marginBottom="8dp"
     android:background="@color/main_background_color"
     tools:context=".ui.finishedPartnerGameDetail.FinishedPartnerGameDetailFragment">
-
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@color/main_background_color"
@@ -53,20 +51,18 @@
         <TextView
             android:id="@+id/teamNames"
             style="@style/TitleTextViewStyle"
-            android:text="@string/teamNames"
+            android:text="@string/teams"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolBar" />
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            android:src="@drawable/ic_group"
+            style="@style/TeamImageViewStyle"
+            android:layout_marginStart="16dp"
+            android:contentDescription="@string/todo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames"
-            android:contentDescription="@string/todo"/>
+            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
 
         <TextView
             android:id="@+id/team1Name"
@@ -74,62 +70,46 @@
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
 
-
         <TextView
             android:id="@+id/team1TotalScore"
             style="@style/ScoreTextViewStyle"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toBottomOf="@+id/team1Name" />
 
-
         <View
             android:id="@+id/vertical_seperator"
-            android:layout_width="1dp"
-            android:layout_height="36dp"
-            android:layout_gravity="center"
-            android:layout_margin="8dp"
-            android:layout_marginTop="64dp"
-            android:background="@color/seperator_color"
+            style="@style/VerticalSeperatorStyle"
+            app:layout_constraintBottom_toTopOf="@+id/horizontal_seperator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            android:src="@drawable/ic_group"
-            app:layout_constraintStart_toEndOf="@+id/vertical_seperator"
-            app:layout_constraintTop_toBottomOf="@+id/teamNames"
-            android:contentDescription="@string/todo"/>
-
+            style="@style/TeamImageViewStyle"
+            android:layout_marginEnd="16dp"
+            android:contentDescription="@string/todo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/teamNames" />
 
         <TextView
             android:id="@+id/team2Name"
             style="@style/NameTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/teamNames" />
-
 
         <TextView
             android:id="@+id/team2TotalScore"
             style="@style/ScoreTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintEnd_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/team2Name" />
 
-
         <View
-            android:id="@+id/vertical2_seperator"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="center"
-            android:layout_margin="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/seperator_color"
+            android:id="@+id/horizontal_seperator"
+            style="@style/HorizontalSeperatorStyle"
+            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/vertical_seperator" />
 
         <TextView
             android:id="@+id/roundLabel"
@@ -137,14 +117,15 @@
             android:text="@string/round_scores"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vertical2_seperator" />
+            app:layout_constraintTop_toBottomOf="@+id/horizontal_seperator" />
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/roundRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/roundLabel" />
 
@@ -159,26 +140,17 @@
         <TextView
             android:id="@+id/gameDetail"
             style="@style/InfoTextViewStyle"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:text="@string/detail"
-            android:layout_margin="8dp"
-            app:drawableLeftCompat="@drawable/ic_trophy"
+            android:layout_margin="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailLabel" />
 
         <TextView
             android:id="@+id/gameDate"
-            android:text="@string/date"
-            android:gravity="center_vertical"
-            android:drawablePadding="8dp"
             style="@style/DateTextViewStyle"
-            android:layout_margin="8dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             app:drawableLeftCompat="@drawable/ic_calendar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gameDetail" />
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
