--- a/app/src/main/res/layout/finished_game_partner_item.xml
+++ b/app/src/main/res/layout/finished_game_partner_item.xml
@@ -14,16 +14,13 @@
         android:layout_height="wrap_content"
         android:padding="8dp">
 
+
         <ImageView
             android:id="@+id/winnerTextViewImageView1"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            android:src="@drawable/ic_group"
+            style="@style/TeamImageViewStyle"
+            android:contentDescription="@string/todo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/todo"/>
-
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/team1Name"
@@ -40,10 +37,7 @@
 
         <View
             android:id="@+id/vertical_seperator"
-            android:layout_width="1dp"
-            android:layout_height="56dp"
-            android:layout_margin="16dp"
-            android:background="@color/seperator_color"
+            style="@style/VerticalSeperatorStyle"
             app:layout_constraintBottom_toTopOf="@+id/horizontal_seperator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,68 +45,44 @@
 
         <ImageView
             android:id="@+id/winnerTextViewImageView2"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_margin="8dp"
-            android:layout_marginStart="16dp"
-            android:src="@drawable/ic_group"
-            app:layout_constraintStart_toEndOf="@+id/vertical_seperator"
-            app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="@string/todo"/>
+            style="@style/TeamImageViewStyle"
+            android:contentDescription="@string/todo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <TextView
             android:id="@+id/team2Name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="@string/player"
-            android:textColor="@color/score_hint_text_color"
-            android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/winnerTextViewImageView2"
+            style="@style/NameTextViewStyle"
+            app:layout_constraintEnd_toStartOf="@+id/winnerTextViewImageView2"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <TextView
             android:id="@+id/team2TotalScore"
             style="@style/ScoreTextViewStyle"
-            app:layout_constraintStart_toEndOf="@+id/winnerTextViewImageView2"
+            app:layout_constraintEnd_toStartOf="@+id/winnerTextViewImageView2"
             app:layout_constraintTop_toBottomOf="@+id/team2Name" />
 
 
         <View
             android:id="@+id/horizontal_seperator"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="16dp"
-            android:background="@color/seperator_color"
+            style="@style/HorizontalSeperatorStyle"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/winnerTextViewImageView1" />
+            app:layout_constraintTop_toBottomOf="@+id/vertical_seperator" />
 
         <TextView
             android:id="@+id/gameInfo"
             style="@style/InfoTextViewStyle"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            app:drawableLeftCompat="@drawable/ic_trophy"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/horizontal_seperator" />
 
         <TextView
             android:id="@+id/gameDate"
             style="@style/DateTextViewStyle"
-            android:layout_margin="8dp"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            app:drawableLeftCompat="@drawable/ic_calendar"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gameInfo" />
 
